src/main/java/com/alchitry/labs/parsers/grammar/LucidParser.java
// Generated from /home/justin/IdeaProjects/AlchitryLabsV2/src/main/java/com/alchitry/labs/parsers/grammar/Lucid.g4 by ANTLR 4.13.0

package com.alchitry.labs.parsers.grammar;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LucidParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
			new PredictionContextCache();
	public static final int
			T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
			T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
			T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
			T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
			T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
			T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52,
			T__52 = 53, T__53 = 54, T__54 = 55, HEX = 56, BIN = 57, DEC = 58, REAL = 59, INT = 60,
			STRING = 61, SEMICOLON = 62, NL = 63, SIGNED = 64, TYPE_ID = 65, CONST_ID = 66, SPACE_ID = 67,
			FUNCTION_ID = 68, BLOCK_COMMENT = 69, COMMENT = 70, WS = 71;
	public static final int
			RULE_source = 0, RULE_global = 1, RULE_globalStat = 2, RULE_module = 3,
			RULE_testBench = 4, RULE_paramList = 5, RULE_portList = 6, RULE_paramDec = 7,
			RULE_paramDefault = 8, RULE_paramConstraint = 9, RULE_portDec = 10, RULE_portDirection = 11,
			RULE_signalWidth = 12, RULE_arraySize = 13, RULE_structType = 14, RULE_structMemberConst = 15,
			RULE_structConst = 16, RULE_moduleBody = 17, RULE_stat = 18, RULE_constDec = 19,
			RULE_assignBlock = 20, RULE_sigCon = 21, RULE_paramCon = 22, RULE_sigDec = 23,
			RULE_dffDec = 24, RULE_enumDec = 25, RULE_moduleInst = 26, RULE_instCons = 27,
			RULE_conList = 28, RULE_connection = 29, RULE_structMember = 30, RULE_structDec = 31,
			RULE_functionArg = 32, RULE_functionBlock = 33, RULE_testBlock = 34, RULE_alwaysBlock = 35,
			RULE_alwaysStat = 36, RULE_block = 37, RULE_assignStat = 38, RULE_arrayIndex = 39,
			RULE_bitSelector = 40, RULE_bitSelection = 41, RULE_signal = 42, RULE_caseStat = 43,
			RULE_caseElem = 44, RULE_caseBlock = 45, RULE_ifStat = 46, RULE_elseStat = 47,
			RULE_repeatStat = 48, RULE_repeatBlock = 49, RULE_function = 50, RULE_functionExpr = 51,
			RULE_number = 52, RULE_expr = 53, RULE_name = 54, RULE_semi = 55;

	private static String[] makeRuleNames() {
		return new String[]{
				"source", "global", "globalStat", "module", "testBench", "paramList",
				"portList", "paramDec", "paramDefault", "paramConstraint", "portDec",
				"portDirection", "signalWidth", "arraySize", "structType", "structMemberConst",
				"structConst", "moduleBody", "stat", "constDec", "assignBlock", "sigCon",
				"paramCon", "sigDec", "dffDec", "enumDec", "moduleInst", "instCons",
				"conList", "connection", "structMember", "structDec", "functionArg",
				"functionBlock", "testBlock", "alwaysBlock", "alwaysStat", "block", "assignStat",
				"arrayIndex", "bitSelector", "bitSelection", "signal", "caseStat", "caseElem",
				"caseBlock", "ifStat", "elseStat", "repeatStat", "repeatBlock", "function",
				"functionExpr", "number", "expr", "name", "semi"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[]{
				null, "'global'", "'{'", "'}'", "'module'", "'testBench'", "'#('", "','",
				"')'", "'('", "'='", "':'", "'input'", "'output'", "'inout'", "'['",
				"']'", "'<'", "'.'", "'>'", "'const'", "'#'", "'sig'", "'dff'", "'enum'",
				"'struct'", "'fun'", "'test'", "'always'", "'+'", "'-'", "'case'", "'default'",
				"'if'", "'else'", "'repeat'", "'c{'", "'x{'", "'~'", "'!'", "'*'", "'/'",
				"'>>'", "'<<'", "'<<<'", "'>>>'", "'|'", "'&'", "'^'", "'=='", "'!='",
				"'>='", "'<='", "'||'", "'&&'", "'?'", null, null, null, null, null,
				null, "';'", null, "'signed'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[]{
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, "HEX", "BIN", "DEC",
				"REAL", "INT", "STRING", "SEMICOLON", "NL", "SIGNED", "TYPE_ID", "CONST_ID",
				"SPACE_ID", "FUNCTION_ID", "BLOCK_COMMENT", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lucid.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LucidParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SourceContext extends ParserRuleContext {
		public TerminalNode EOF() {
			return getToken(LucidParser.EOF, 0);
		}

		public List<GlobalContext> global() {
			return getRuleContexts(GlobalContext.class);
		}
		public GlobalContext global(int i) {
			return getRuleContext(GlobalContext.class, i);
		}
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class, i);
		}
		public List<TestBenchContext> testBench() {
			return getRuleContexts(TestBenchContext.class);
		}

		public TestBenchContext testBench(int i) {
			return getRuleContext(TestBenchContext.class, i);
		}

		public List<TerminalNode> NL() {
			return getTokens(LucidParser.NL);
		}

		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}

		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_source;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterSource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitSource(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof LucidVisitor) return ((LucidVisitor<? extends T>) visitor).visitSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -9223372036854775758L) != 0)) {
					{
						setState(116);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
							case T__0: {
								setState(112);
								global();
							}
							break;
							case T__3: {
								setState(113);
								module();
							}
							break;
							case T__4: {
								setState(114);
								testBench();
							}
							break;
							case NL: {
								setState(115);
								match(NL);
							}
							break;
							default:
								throw new NoViableAltException(this);
						}
					}
					setState(120);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(121);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(LucidParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}
		public List<GlobalStatContext> globalStat() {
			return getRuleContexts(GlobalStatContext.class);
		}
		public GlobalStatContext globalStat(int i) {
			return getRuleContext(GlobalStatContext.class,i);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitGlobal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LucidVisitor ) return ((LucidVisitor<? extends T>)visitor).visitGlobal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(123);
				match(T__0);
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(124);
							match(NL);
						}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(130);
				name();
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(131);
							match(NL);
						}
					}
					setState(136);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(137);
				match(T__1);
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(138);
								match(NL);
							}
						}
					}
					setState(143);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 51380224L) != 0)) {
					{
						{
							setState(144);
							globalStat();
						}
					}
					setState(149);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(150);
							match(NL);
						}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(156);
				match(T__2);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalStatContext extends ParserRuleContext {
		public StructDecContext structDec() {
			return getRuleContext(StructDecContext.class, 0);
		}
		public ConstDecContext constDec() {
			return getRuleContext(ConstDecContext.class, 0);
		}
		public EnumDecContext enumDec() {
			return getRuleContext(EnumDecContext.class, 0);
		}

		public GlobalStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_globalStat;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterGlobalStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitGlobalStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof LucidVisitor) return ((LucidVisitor<? extends T>) visitor).visitGlobalStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalStatContext globalStat() throws RecognitionException {
		GlobalStatContext _localctx = new GlobalStatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_globalStat);
		try {
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case T__24:
					enterOuterAlt(_localctx, 1);
				{
					setState(158);
					structDec();
				}
				break;
				case T__19:
					enterOuterAlt(_localctx, 2);
				{
					setState(159);
					constDec();
				}
				break;
				case T__23:
					enterOuterAlt(_localctx, 3);
				{
					setState(160);
					enumDec();
				}
				break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class, 0);
		}
		public PortListContext portList() {
			return getRuleContext(PortListContext.class, 0);
		}

		public ModuleBodyContext moduleBody() {
			return getRuleContext(ModuleBodyContext.class, 0);
		}

		public List<TerminalNode> NL() {
			return getTokens(LucidParser.NL);
		}

		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class, 0);
		}

		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_module;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof LucidVisitor) return ((LucidVisitor<? extends T>) visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_module);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(163);
				match(T__3);
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(164);
							match(NL);
						}
					}
					setState(169);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(170);
				name();
				setState(174);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(171);
								match(NL);
							}
						}
					}
					setState(176);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 9, _ctx);
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__5) {
					{
						setState(177);
						paramList();
					}
				}

				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(180);
							match(NL);
						}
					}
					setState(185);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(186);
				portList();
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(187);
							match(NL);
						}
					}
					setState(192);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(193);
				moduleBody();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TestBenchContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class, 0);
		}

		public ModuleBodyContext moduleBody() {
			return getRuleContext(ModuleBodyContext.class, 0);
		}

		public List<TerminalNode> NL() {
			return getTokens(LucidParser.NL);
		}

		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}

		public TestBenchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_testBench;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).enterTestBench(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof LucidListener) ((LucidListener) listener).exitTestBench(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof LucidVisitor) return ((LucidVisitor<? extends T>) visitor).visitTestBench(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TestBenchContext testBench() throws RecognitionException {
		TestBenchContext _localctx = new TestBenchContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_testBench);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(195);
				match(T__4);
				setState(199);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(196);
							match(NL);
						}
					}
					setState(201);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(202);
				name();
				setState(206);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(203);
							match(NL);
						}
					}
					setState(208);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(209);
				moduleBody();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamListContext extends ParserRuleContext {
		public List<ParamDecContext> paramDec() {
			return getRuleContexts(ParamDecContext.class);
		}
		public ParamDecContext paramDec(int i) {
			return getRuleContext(ParamDecContext.class, i);
		}
		public List<TerminalNode> NL() { return getTokens(LucidParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}
		public ParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitParamList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LucidVisitor ) return ((LucidVisitor<? extends T>)visitor).visitParamList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamListContext paramList() throws RecognitionException {
		ParamListContext _localctx = new ParamListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_paramList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(211);
				match(T__5);
				setState(215);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(212);
							match(NL);
						}
					}
					setState(217);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(218);
				paramDec();
				setState(235);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 18, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(222);
								_errHandler.sync(this);
								_la = _input.LA(1);
								while (_la == NL) {
									{
										{
											setState(219);
											match(NL);
										}
									}
									setState(224);
									_errHandler.sync(this);
									_la = _input.LA(1);
								}
								setState(225);
								match(T__6);
								setState(229);
								_errHandler.sync(this);
								_la = _input.LA(1);
								while (_la == NL) {
									{
										{
											setState(226);
											match(NL);
										}
									}
									setState(231);
									_errHandler.sync(this);
									_la = _input.LA(1);
								}
								setState(232);
								paramDec();
							}
						}
					}
					setState(237);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 18, _ctx);
				}
				setState(241);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == NL) {
					{
						{
							setState(238);
							match(NL);
						}
					}
					setState(243);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(244);
				match(T__7);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PortListContext extends ParserRuleContext {
		public List<PortDecContext> portDec() {
			return getRuleContexts(PortDecContext.class);
		}
		public PortDecContext portDec(int i) {
			return getRuleContext(PortDecContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(LucidParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(LucidParser.NL, i);
		}
		public PortListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_portList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).enterPortList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LucidListener ) ((LucidListener)listener).exitPortList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LucidVisitor ) return ((LucidVisitor<? extends T>)visitor).visitPortList(this);
			else return visitor.visitChildren(this);
		}
	}
